syntax = "proto3";

package user_center;

option go_package = "./v1;v1";

import "validate/validate.proto";

message AddUserAppRequest {
  uint32 user_id = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 app_id = 2[(validate.rules).uint32 = {gt: 0}];
}

message DeleteUserAppRequest {
  uint32 user_id = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 app_id = 2[(validate.rules).uint32 = {gt: 0}];
}